--- a/repl/index.html
+++ b/repl/index.html
@@ -63,7 +63,7 @@ jQuery(function($, undefined) {
 			$('#term').terminal().insert(value);
 		}
 
-		if (params.hide !== null) hide();
+		if (params.get('hide') !== null) hide();
 	}
 });
 
