changed some wording

--- a/repl/genlink.html
+++ b/repl/genlink.html
@@ -35,9 +35,9 @@ function translate() {
 <h1>Murmel Online REPL link generator</h1>
 
 <div class="text">
-The <a href="https://jmurmel.github.io/repl/">Murmel Online REPL</a> supports an URL parameter <tt>lisp</tt>.
-Use the form below to create an URL from your Lisp code
-that can be shared and will open a REPL with the code already present,
+The <a href="https://jmurmel.github.io/repl/">Murmel Online REPL</a> supports a URL parameter <tt>lisp</tt>.
+Use the form below to create a sharable hyperlink from your Lisp code
+that will open a REPL with your code already present at the input prompt,
 ready to run (while still being editable).
 </div>
 <div class="text">
