--- a/repl/index.html
+++ b/repl/index.html
@@ -92,7 +92,7 @@ function show() {
 </div>
 
 <div class="text">
-	Links with Lisp code snippets can be generated using the <a href="genlink.html" target="_blank">Murmel Online REPL link generator</a>
+	Sharable hyperlinks with Lisp code snippets can be generated using the <a href="genlink.html" target="_blank">Murmel Online REPL link generator</a>
 </div>
 
 <div id="credits" class="text">
@@ -109,18 +109,18 @@ see <a href="https://labs.leaningtech.com/cheerpj3/licensing" target="_blank">Ch
 <div class="text">
 This REPL has an editable, searchable history with keyboard shortcuts:
 <ul>
-<li><tt>Shift-Enter</tt> allows entering multi-line commands
-<li><tt>CTRL+A/CTRL+E</tt> move to the start or end of a form (or use <tt>Pos-1</tt> or <tt>End</tt>)
+<li><tt>Shift+Enter</tt> allows entering multi-line commands
+<li><tt>CTRL+A</tt> or <tt>CTRL+E</tt> move to the start or end of a form respectively (or use <tt>Pos-1</tt> or <tt>End</tt>)
 <li><tt>CTRL+K</tt> erases from the current cursor position to the end of the current form
 <li><tt>CTRL+L</tt> clears the screen
 <li><tt>CTRL+R</tt> starts reverse history search, <tt>CTRL+G</tt> exits, <tt>Enter</tt> runs the search result,
 	any arrow key transfers the search result to the REPL prompt
-<li>Within reverse search
+<li>Within reverse search:
 	<ul>
-	<li>if the history element is a single line <tt>Up/Down</tt> moves in the history
-	<li>if you're in the middle of a multiline history element <tt>Up/Down</tt> move within the history element
-	<li>if you're in the first (last) line of a history element <tt>Up (Down)</tt> moves to the previous (next) history element
-	<li><tt>CTRL+Up/CTRL+Down</tt> will move to the previous/next history element even if in the middle of a multiline history element
+	<li>if the currently displayed history element is a single line: <tt>Up / Down</tt> moves within the history
+	<li>if you are in the middle of a multiline history element: <tt>Up / Down</tt> moves within the history element
+	<li>if you are in the first (last) line of a history element: <tt>Up / Down</tt> moves to the previous / next history element
+	<li><tt>CTRL+Up / CTRL+Down</tt> will move to the previous or next history element even if in the middle of a multiline history element
 	</ul>
 </ul>
 </div>
