--- a/repl/genlink.html
+++ b/repl/genlink.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Online REPL link generator for Murmel, a Lisp dialect.">
 <title>Murmel Online REPL link generator</title>
 <style>
 	body {margin:1em auto; max-width:40em; padding:0 .62em; font: 1em/1.62 sans-serif;}
@@ -41,9 +42,9 @@ that will open a REPL with your code already present at the input prompt,
 ready to run (while still being editable).
 </div>
 <div class="text">
-(1) Enter some Lisp code:<br>
+<label for="input">(1) Enter some Lisp code:</label><br>
 <textarea id="input" rows="20"></textarea><br>
-(2) <input type="checkbox" id="hide"> Initially hide the explanations on the REPL page<br>
+(2) <input type="checkbox" id="hide"> <label for="hide">Initially hide the explanations on the REPL page</label><br>
 (3) Click the button to generate a Murmel Online REPL URL and copy it to your clipboard:<br>
 <button id="go">Copy URL to clipboard!</button><br>
 </div>
