--- a/repl/index.html
+++ b/repl/index.html
@@ -92,7 +92,7 @@ function show() {
 </div>
 
 <div class="text">
-	Sharable hyperlinks with Lisp code snippets can be generated using the <a href="genlink.html" target="_blank">Murmel Online REPL link generator</a>
+	Sharable hyperlinks with Lisp code snippets can be generated using the <a href="genlink.html" target="_blank">Murmel Online REPL link generator</a>.
 </div>
 
 <div id="credits" class="text">
@@ -115,7 +115,7 @@ This REPL has an editable, searchable history with keyboard shortcuts:
 <li><tt>CTRL+L</tt> clears the screen
 <li><tt>CTRL+R</tt> starts reverse history search, <tt>CTRL+G</tt> exits, <tt>Enter</tt> runs the search result,
 	any arrow key transfers the search result to the REPL prompt
-<li>Within reverse search:
+<li>Within reverse history search:
 	<ul>
 	<li>if the currently displayed history element is a single line: <tt>Up / Down</tt> moves within the history
 	<li>if you are in the middle of a multiline history element: <tt>Up / Down</tt> moves within the history element
