target and external links

--- a/repl/index.html
+++ b/repl/index.html
@@ -85,25 +85,25 @@ function show() {
 
 <div id="explanation">
 <div class="text">
-	<a href="https://jmurmel.github.io" target="_blank">Murmel</a> is a Lisp interpreter/ compiler,
-	see the <a href="murmel-langref.html" target="_blank">Murmel Language Reference</a>
-	and the <a href="mlib.html" target="_blank">Murmel Default Library Reference</a>
+	<a href="https://jmurmel.github.io">Murmel</a> is a Lisp interpreter/ compiler,
+	see the <a href="murmel-langref.html">Murmel Language Reference</a>
+	and the <a href="mlib.html">Murmel Default Library Reference</a>
 	(type <tt>(require "mlib")</tt> at the REPL to use it).
 </div>
 
 <div class="text">
-	Sharable hyperlinks with Lisp code snippets can be generated using the <a href="genlink.html" target="_blank">Murmel Online REPL link generator</a>.
+	Sharable hyperlinks with Lisp code snippets can be generated using the <a href="genlink.html">Murmel Online REPL link generator</a>.
 </div>
 
 <div id="credits" class="text">
-<a href="https://jmurmel.github.io" target="_blank">Murmel</a> Online REPL uses
-<a href="https://github.com/jquery/jquery" target="_blank">jQuery 3.7.1</a>,
-<a href="https://labs.leaningtech.com/cheerpj3" target="_blank">CheerpJ 3.0</a> (*)
-and <a href="https://terminal.jcubic.pl/" target="_blank">jQuery Terminal 2.38.0</a>.
-<br>
-(*) <a href="https://labs.leaningtech.com/cheerpj3" target="_blank">CheerpJ</a>
-is free to use for personal projects, most non-commercial applications, and for technical evaluations,
-see <a href="https://labs.leaningtech.com/cheerpj3/licensing" target="_blank">CheerpJ licensing</a>.
+This <a href="https://jmurmel.github.io">Murmel</a> Online REPL is served from a static Webserver
+and runs completely in your browser, using
+<a href="https://github.com/jquery/jquery" target="_blank">jQuery 3.7.1 <img src="../img/external_site.gif" alt="external link opens in a new window"></a>,
+<a href="https://labs.leaningtech.com/cheerpj3" target="_blank">CheerpJ 3.0 (*) <img src="../img/external_site.gif" alt="external link opens in a new window"></a>
+and <a href="https://terminal.jcubic.pl/" target="_blank">jQuery Terminal 2.38.0 <img src="../img/external_site.gif" alt="external link opens in a new window"></a>.
+<br><br>
+(*) CheerpJ is free to use for personal projects, most non-commercial applications, and for technical evaluations,
+see <a href="https://labs.leaningtech.com/cheerpj3/licensing" target="_blank">CheerpJ licensing <img src="../img/external_site.gif" alt="external link opens in a new window"></a>.
 </div>
 
 <div class="text">
