--- a/repl/index.html
+++ b/repl/index.html
@@ -89,8 +89,8 @@ function show() {
 <div id="explanation">
 <div class="text">
 	<a href="https://jmurmel.github.io">Murmel</a> is a Lisp interpreter/ compiler,
-	see the <a href="murmel-langref.html">Murmel Language Reference</a>
-	and the <a href="mlib.html">Murmel Default Library Reference</a>
+	see the <a href="../murmel-langref.html">Murmel Language Reference</a>
+	and the <a href="../mlib.html">Murmel Default Library Reference</a>
 	(type <tt>(require "mlib")</tt> at the REPL to use it).
 </div>
 
