--- a/repl/genlink.html
+++ b/repl/genlink.html
@@ -43,7 +43,7 @@ ready to run (while still being editable).
 </div>
 <div class="text">
 <label for="input">(1) Enter some Lisp code:</label><br>
-<textarea id="input" rows="20"></textarea><br>
+<textarea id="input" rows="20" placeholder="Your Lisp code goes here..."></textarea><br>
 (2) <input type="checkbox" id="hide"> <label for="hide">Initially hide the explanations on the REPL page</label><br>
 (3) Click the button to generate a Murmel Online REPL URL and copy it to your clipboard:<br>
 <button id="go">Copy URL to clipboard!</button><br>
